--- a/css/style.css
+++ b/css/style.css
@@ -1053,6 +1053,7 @@ line-height: normal;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 5px;
+    padding-bottom:41px;
     height: 197px;
     transition: border-color 0.3s ease-in-out; /* Add transition for border-color */
 }
@@ -1063,10 +1064,7 @@ line-height: normal;
 
 
 .dostavka-info {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end; /* Выравнивание по левому краю */
-    margin-top: -10px;
+    margin-top: -12px;
     
 }
 
@@ -1076,7 +1074,7 @@ line-height: normal;
 .dostavka-info .heart-icon {
     display: inline-block;
     vertical-align: bottom;
-    align-self: flex-start;
+
 }   
 
 .dostavka-info .nazvanres{
@@ -1134,7 +1132,7 @@ line-height: normal;
 .scidka p::after {
     content: '';
     position: absolute;
-    top: 1920px;
+    top: 1955px;
     left: -250px;
     width: 864px;
     height: 56.2px;
@@ -1158,6 +1156,7 @@ line-height: normal;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 5px;
+    padding-bottom: 41px;
     height: 197px;
     transition: border-color 0.3s ease-in-out; /* Add transition for border-color */
 }
